# smash

./: .gitignore  cabal.project
smash-categories/: flake.nix  smash-categories.cabal
smash-categories/src/Control/Category/: Pointed.hs
