cabal-version:      2.0
name:               smash-categories
version:            0.1.2
synopsis:           Pointed categories, wedge sums, and smash products
description:
  Smash products are like the 'These' datatype, only with a unit. You can
  think of this type as isomorphic to 'Maybe (These a b)'.

homepage:           https://github.com/emilypi/smash
bug-reports:        https://github.com/emilypi/smash/issues
license:            BSD3
license-file:       LICENSE
author:             Emily Pillmore
maintainer:         emilypi@cohomolo.gy
copyright:          (c) 2020-2021 Emily Pillmore <emilypi@cohomolo.gy>
category:           Data
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  --GHC ==8.6.5 || ==8.8.4 || ==8.10.4 || ==9.0.1

source-repository head
  type:     git
  location: https://github.com/emilypi/smash.git

library
  exposed-modules:
    Control.Category.Pointed

  other-modules:    
  build-depends:
      base             >=4.12 && <4.16
    , smash            ^>=0.1
    , categories       ^>=1.0
    , adjunctions      ^>=4.4
    , these            ^>=1.1

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
